# sofa

./: CMakeLists.txt  CMakePresets.json
Sofa/framework/Config/: CMakeLists.txt
Sofa/framework/Config/src/sofa/: config.h.in
Sofa/framework/Helper/src/sofa/helper/: BackTrace.cpp  Utils.cpp
Sofa/framework/Type/: CMakeLists.txt
applications/projects/: CMakeLists.txt
applications/projects/sofaCompatTest/: CMakeLists.txt  sofaCompatTest.cpp
applications/projects/sofaConfigTest/: CMakeLists.txt  sofaConfigTest.cpp
applications/projects/sofaCoreTest/: CMakeLists.txt  sofaCoreTest.cpp
applications/projects/sofaDefaultTypeTest/: CMakeLists.txt  sofaDefaultTypeTest.cpp
applications/projects/sofaFrameworkTest/: CMakeLists.txt  sofaFrameworkTest.cpp
applications/projects/sofaGeometryTest/: CMakeLists.txt  sofaGeometryTest.cpp
applications/projects/sofaHelperTest/: CMakeLists.txt  sofaHelperTest.cpp
applications/projects/sofaLinearAlgebraTest/: CMakeLists.txt  sofaLinearAlgebraTest.cpp
applications/projects/sofaSimulationTest/: CMakeLists.txt  sofaSimulationTest.cpp
applications/projects/sofaTestingTest/: CMakeLists.txt  sofaTestingTest.cpp
applications/projects/sofaTopologyTest/: CMakeLists.txt  sofaTopologyTest.cpp
applications/projects/sofaTypeTest/: CMakeLists.txt  sofaTypeTest.cpp
config_test/: configTest.cpp  executable  libSofa.Config.so.23.12.99  main.cpp
